test/raw_tests/fails/fallback_ko1.sol
contract Sample {
function() payable external {
}

function() external {
}

}